competence-gui/competence-webapp/war/css/competencecss/evidencePopup.css
@CHARSET "ISO-8859-1";

/* .evidencePopup { */
/* 	width: 625px; */
/* } */
/* .evidenceStackPanel { */
/* 	width: 625px; */
/* } */
.evidenceEntry {    
    width: 200px !important;
    padding-left: 5px !important;
    padding-right: 35px !important;
    margin-bottom: 10px !important;
}

.evidenceEntryHeader {    
    width: 235px !important;
    padding-left: 5px !important;    
    margin-bottom: 10px !important;
}

.evidenceLinkHeader {
	padding-left: 5px !important;    
    margin-bottom: 10px !important;
    min-width: 85px !important;
    padding-right: 35px !important;
}


.activity-preview {
    padding-right: 10px !important;
    width: 120px !important;
    padding-left: 5px !important;
    margin-bottom: 10px !important;
}


.commentEntry {
    padding-right: 2px !important;
    width: 320px !important;
    padding-left: 5px !important;
    margin-bottom: 10px !important;
}


.commentEntryHeader {    
    width: 320px !important;    
    margin-bottom: 10px !important;
}

.validityColumn {
    width: 70px !important;
    margin-right: 5px !important;
    margin-left: 25px !important;
    margin-bottom: 10px !important;    
}


.validityColumnHeader {
	width: 70px !important;
}

.commentTextAreaBox {
    width: 625px !important;
    height: 85px;
}


.stackTitlePicture {
    background-image: url(../../icons/selectedStackPanel.png);
    background-repeat:no-repeat !important;
    width: 30px;
    height: 30px;
    float: left;
}


.gwt-StackPanelItem-selected > table > tbody > tr.stackItemMiddle > td.stackItemMiddleCenter > div > div.stackTitlePicture {
    background-image: url(../../icons/notSelectedStackPanel.png);
    background-repeat:no-repeat !important;
    width: 30px;
    height: 30px;
    float: left;
}


.stackTitle {
    padding-left: 15px;
    float: left;
}

.gwt-StackPanelContent {
    background-color: #d3def6 !important;
}

.commentWidgetPlaceholder {
    background-color: white !important;
    -webkit-border-radius: 15px !important;
    -moz-border-radius: 15px !important;
    border-radius: 15px !important;
    border-style:outset !important;
    border-width:thin !important;	
    padding: 10px !important;
}


/* .icon-thumbs-down { */
/*     transform:scale(2.0,2.0) !important; */
/*     -ms-transform:scale(2.0,2.0) !important; IE 9 */
/*     -moz-transform:scale(2.0,2.0) !important; Firefox */
/*     -webkit-transform:scale(2.0,2.0) !important; Safari and Chrome */
/*     -o-transform:scale(2.0,2.0) !important; Opera */
/* } */

